Fixes text wrap img display on phone

--- a/Website/static/css/style.samm.css
+++ b/Website/static/css/style.samm.css
@@ -3878,6 +3878,14 @@ a.list-group-item.active > .badge,
   width: 200px;
 }
 
+@media screen and (max-width: 600px) {
+  .text-wrap-img-medium {
+    display: block;
+    margin: 10px;
+    width: 200px;
+    }
+}
+
 .text-wrap-img-medium {
   float: right;
   margin: 10px;
